--- a/src/locale/ru.json
+++ b/src/locale/ru.json
@@ -1,6 +1,7 @@
 {
     "home": "главное",
-    "about": "об о мне",
+    "about": "об о",
+    "me": "мне",
     "project": "проект",
     "projects": "проекты",
     "hi": "привет",
