many changes added tailwind

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -7,8 +7,12 @@
     "hi": "hi",
     "go_to": "go to",
     "hi_from_the_page": "hi from the page",
-    "go_back_to_the_homepage": "go back to the homepage",
+    "homepage": "homepage",
     "here": "here",
     "my": "my",
-    "here_my_projects": "here my projects"
+    "here_my_projects": "here my projects",
+    "contact": "contact",
+    "contacts": "contacts",
+    "education": "education",
+    "experience": "experience"
 }
